Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp
@@ -67,6 +67,8 @@ CoordinatedLayerTreeHost::CoordinatedLayerTreeHost(WebPage* webPage)
     , m_layerFlushTimer(this, &CoordinatedLayerTreeHost::layerFlushTimerFired)
     , m_layerFlushSchedulingEnabled(true)
     , m_forceRepaintAsyncCallbackID(0)
+    , m_contentLayer(nullptr)
+    , m_viewOverlayRootLayer(nullptr)
 {
     m_coordinator = std::make_unique<CompositingCoordinator>(webPage->corePage(), this);
 
@@ -112,9 +114,24 @@ void CoordinatedLayerTreeHost::setShouldNotifyAfterNextScheduledLayerFlush(bool 
     m_notifyAfterScheduledLayerFlush = notifyAfterScheduledLayerFlush;
 }
 
+void CoordinatedLayerTreeHost::updateRootLayers()
+{
+    if (!m_contentLayer && !m_viewOverlayRootLayer)
+        return;
+
+    m_coordinator->setRootCompositingLayer(m_contentLayer, m_viewOverlayRootLayer);
+}
+
+void CoordinatedLayerTreeHost::setViewOverlayRootLayer(WebCore::GraphicsLayer* viewOverlayRootLayer)
+{
+    m_viewOverlayRootLayer = viewOverlayRootLayer;
+    updateRootLayers();
+}
+
 void CoordinatedLayerTreeHost::setRootCompositingLayer(WebCore::GraphicsLayer* graphicsLayer)
 {
-    m_coordinator->setRootCompositingLayer(graphicsLayer, &m_webPage->mainFrame()->pageOverlayController().viewOverlayRootLayer());
+    m_contentLayer = graphicsLayer;
+    updateRootLayers();
 }
 
 void CoordinatedLayerTreeHost::invalidate()
@@ -178,7 +195,8 @@ void CoordinatedLayerTreeHost::purgeBackingStores()
 void CoordinatedLayerTreeHost::didFlushRootLayer(const FloatRect& visibleContentRect)
 {
     // Because our view-relative overlay root layer is not attached to the FrameView's GraphicsLayer tree, we need to flush it manually.
-    m_coordinator->mainContentsLayer()->flushCompositingState(visibleContentRect);
+    if (m_coordinator->mainContentsLayer())
+        m_coordinator->mainContentsLayer()->flushCompositingState(visibleContentRect);
 }
 
 void CoordinatedLayerTreeHost::performScheduledLayerFlush()
